@@ -671,6 +671,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #22127: Bypass IDNA for pure-ASCII host names 
+  (in particular for numeric IPs).
+
 - Issue #21407: _decimal: The module now supports function signatures.
 
 - Issue #21276: posixmodule: Don't define USE_XATTRS on KFreeBSD and the Hurd.
